@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.cryptomator</groupId>
     <artifactId>fuse-nio-adapter</artifactId>
-    <version>5.0.2</version>
+    <version>5.0.3</version>
     <name>FUSE-NIO-Adapter</name>
     <description>Access resources at a given NIO path via FUSE.</description>
     <url>https://github.com/cryptomator/fuse-nio-adapter</url>
@@ -12,7 +12,7 @@
     <scm>
         <connection>scm:git:git@github.com:cryptomator/fuse-nio-adapter.git</connection>
         <developerConnection>scm:git:git@github.com:cryptomator/fuse-nio-adapter.git</developerConnection>
-        <url>git@github.com:cryptomator/fuse-nio-adapter.git</url>
+        <url>https://github.com/cryptomator/fuse-nio-adapter</url>
     </scm>
 
     <properties>
@@ -20,20 +20,20 @@
         <project.build.jdk>22</project.build.jdk>
 
         <!-- dependencies -->
-        <integrations-api.version>1.4.0</integrations-api.version>
-        <jfuse.version>0.7.0</jfuse.version>
-        <slf4j.version>2.0.16</slf4j.version>
-        <caffeine.version>3.1.8</caffeine.version>
+        <integrations-api.version>1.5.1</integrations-api.version>
+        <jfuse.version>0.7.1</jfuse.version>
+        <slf4j.version>2.0.17</slf4j.version>
+        <caffeine.version>3.2.0</caffeine.version>
 
         <!-- test dependencies -->
-        <junit.jupiter.version>5.11.3</junit.jupiter.version>
-        <mockito.version>5.14.2</mockito.version>
-        <cryptofs.version>2.7.0</cryptofs.version>
+        <junit.jupiter.version>5.12.0</junit.jupiter.version>
+        <mockito.version>5.16.0</mockito.version>
+        <cryptofs.version>2.8.0</cryptofs.version>
 
         <!-- build dependencies -->
         <mvn-sign.version>3.2.7</mvn-sign.version>
-        <dependency-check.version>11.0.0</dependency-check.version>
-        <maven.deploy.version>3.1.3</maven.deploy.version>
+        <dependency-check.version>12.1.0</dependency-check.version>
+        <maven.deploy.version>3.1.4</maven.deploy.version>
         <jacoco.version>0.8.12</jacoco.version>
     </properties>
 
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>26.0.1</version>
+            <version>26.0.2</version>
             <scope>provided</scope>
         </dependency>
 
@@ -153,7 +153,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>3.14.0</version>
                 <configuration>
                     <showWarnings>true</showWarnings>
                     <release>${project.build.jdk}</release>
@@ -190,9 +190,9 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.5.2</version>
                 <configuration>
-                    <argLine>@{surefire.jacoco.args} -javaagent:${net.bytebuddy:byte-buddy-agent:jar}</argLine>
+                    <argLine>@{surefire.jacoco.args} -javaagent:"${org.mockito:mockito-core:jar}"</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -214,7 +214,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.11.2</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -223,7 +223,6 @@
                         </goals>
                         <configuration>
                             <release>${project.build.jdk}</release>
-                            <additionalOptions>--enable-preview</additionalOptions>
                         </configuration>
                     </execution>
                 </executions>
@@ -313,26 +312,18 @@
 
         <profile>
             <id>deploy-central</id>
-            <distributionManagement>
-                <repository>
-                    <id>ossrh</id>
-                    <name>Maven Central</name>
-                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-            </distributionManagement>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.7.0</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                        </configuration>
-                    </plugin>
+					<plugin>
+						<groupId>org.sonatype.central</groupId>
+ 						<artifactId>central-publishing-maven-plugin</artifactId>
+ 						<version>0.7.0</version>
+						<extensions>true</extensions>
+						<configuration>
+							<publishingServerId>central</publishingServerId>
+  							<autoPublish>true</autoPublish>
+						</configuration>
+					</plugin>
                 </plugins>
             </build>
         </profile>
